RESOLVED FIXED 260735
[Cocoa] Window/screen picker is not shown when another SCStream is active
https://bugs.webkit.org/show_bug.cgi?id=260735
Summary [Cocoa] Window/screen picker is not shown when another SCStream is active
Eric Carlson
Reported 2023-08-25 13:26:05 PDT
The system window/screen picker is not shown when another SCStream is active
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-25 13:26:17 PDT
Eric Carlson
Comment 2 2023-08-25 13:31:52 PDT
EWS
Comment 3 2023-08-25 14:59:42 PDT
Committed 267301@main (855292ca7929): <https://commits.webkit.org/267301@main> Reviewed commits have been landed. Closing PR #17079 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.