Cherry-pick 855292ca7929. rdar://114467908

[Cocoa] Window/screen picker is not shown when another SCStream is active
    https://bugs.webkit.org/show_bug.cgi?id=260735
    rdar://114467908

    Reviewed by Jer Noble.

    `SCContentSharingPicker.maximumStreamCount` controls the maximum number of SCStreams that
    can be active in a process. WebKit should allow an arbitrary number of window/screen
    streams to be created, so set it to std::numeric_limits<unsigned>::max().

    * Source/WebCore/platform/mediastream/mac/ScreenCaptureKitSharingSessionManager.mm:
    (WebCore::ScreenCaptureKitSharingSessionManager::promptWithSCContentSharingPicker):

    Canonical link: https://commits.webkit.org/267301@main

Identifier: 265870.491@safari-7616-branch